--- a/gun.html
+++ b/gun.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 		<center>
-			<a href="file:index.html">Back To Main</a>
+			<a href="index.html">Back To Main</a>
 			<h1>Gun Testing</h1>
 			<iframe frameborder="0" src="https://itch.io/embed-upload/4585889?color=e5e5e5" allowfullscreen="" width="960" height="680"><a href="https://joamaluigi.itch.io/gun-test">Play gun test on itch.io</a></iframe>
 			<p>r to restart. other controls self explanatory.</p>
