--- a/marble.html
+++ b/marble.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 		<center>
-			<a href="file:index.html">Back To Main</a>
+			<a href="index.html">Back To Main</a>
 			<h1>Marble Racer</h1>
 			<iframe frameborder="0" src="https://itch.io/embed-upload/7436273?color=333333" allowfullscreen="" width="960" height="660"><a href="https://joamaluigi.itch.io/marble-racer">Play Marble Racer on itch.io</a></iframe>
 			<p>WASD to move, Arrow Keys to control the camera r to reset.</p>
