--- a/orange.html
+++ b/orange.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 		<center>
-			<a href="file:index.html">Back To Main</a>
+			<a href="index.html">Back To Main</a>
 			<h1>Orange Man's Last Stand</h1>
 			<iframe frameborder="0" src="https://itch.io/embed-upload/7145220?color=ff860c" allowfullscreen="" width="640" height="380"><a href="https://joamaluigi.itch.io/orange-mans-last-stand-standing-again">Play Orange Mans Last Stand : Standing Again on itch.io</a></iframe>
 			<p>A port of the scratch version with enhancements like 60fps and codeless saves. 
