--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 
 			<h1>My Games</h1>
 
-			<a href="marble.html">
+			<a href="https://randomgamestudios.github.io/marble.html">
 				<h2>Marble Racer</h2>
 				<img src="https://img.itch.zone/aW1nLzExNDQ1OTIyLnBuZw==/315x250%23c/bQCWxc.png" width = 400>
 			</a>
 
-			<a href="orange.html">
+			<a href="https://randomgamestudios.github.io/orange.html">
 				<h2>Orange Man's Last Stand</h2> 
 				<img src="https://img.itch.zone/aW1nLzExMDA0ODgwLnBuZw==/315x250%23c/J2FQ6k.png" width = 400>
 			</a>
 
-			<a href="runner.html">
+			<a href="https://randomgamestudios.github.iorunner.html">
 				<h2>Random Runner 3D</h2> 
 				<img src="https://img.itch.zone/aW1nLzc4NzM4ODYucG5n/315x250%23c/wMgpXt.png" width = 400>
 			</a>
 
-			<a href="taxevasion.html">
+			<a href="https://randomgamestudios.github.iotaxevasion.html">
 				<h2>mr krabs tax evasion : all out of water</h2> 
 				<img src="https://img.itch.zone/aW1nLzEwNDQxODgzLnBuZw==/315x250%23c/wLJNU8.png" width = 400>
 			</a>
 
-			<a href="gun.html">
+			<a href="https://randomgamestudios.github.iogun.html">
 				<h2>Gun Testing</h2> 
 				<img src="https://img.itch.zone/aW1nLzExNDU5NjI2LnBuZw==/315x250%23c/8fW2l7.png" width = 400>
 			</a>
