--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
 				<img src="https://img.itch.zone/aW1nLzExMDA0ODgwLnBuZw==/315x250%23c/J2FQ6k.png" width = 400>
 			</a>
 
-			<a href="https://randomgamestudios.github.iorunner.html">
+			<a href="https://randomgamestudios.github.io/runner.html">
 				<h2>Random Runner 3D</h2> 
 				<img src="https://img.itch.zone/aW1nLzc4NzM4ODYucG5n/315x250%23c/wMgpXt.png" width = 400>
 			</a>
 
-			<a href="https://randomgamestudios.github.iotaxevasion.html">
+			<a href="https://randomgamestudios.github.io/taxevasion.html">
 				<h2>mr krabs tax evasion : all out of water</h2> 
 				<img src="https://img.itch.zone/aW1nLzEwNDQxODgzLnBuZw==/315x250%23c/wLJNU8.png" width = 400>
 			</a>
 
-			<a href="https://randomgamestudios.github.iogun.html">
+			<a href="https://randomgamestudios.github.io/gun.html">
 				<h2>Gun Testing</h2> 
 				<img src="https://img.itch.zone/aW1nLzExNDU5NjI2LnBuZw==/315x250%23c/8fW2l7.png" width = 400>
 			</a>
