--- a/runner.html
+++ b/runner.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 		<center>
-			<a href="index.html">Back To Main</a>
+			<a href="https://randomgamestudios.github.io/index.html">Back To Main</a>
 			<h1>Random Runner 3D</h1>
 			<iframe frameborder="0" src="https://itch.io/embed-upload/7013816?color=36f42b" allowfullscreen="" width="640" height="420"><a href="https://joamaluigi.itch.io/random-runner-3d">Play Random Runner 3D on itch.io</a></iframe>
 			<p>My first mobile game. arrow keys or left stick to move, up and down arrows to change walk speed. space or A to jump</p>
