--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</a>
 			
 			<footer>
-				&copy; 2023 Riley Ferrier
+				&copy; 2023 RandomGameStudios
 			</footer>
 		</center>
     </body>
